# gurk-rs

./: Cargo.toml
src/: app.rs  config.rs  data.rs  environment.rs  main.rs  signal.rs  storage.rs  store.rs  ui.rs  update.rs  util.rs
src/signal/: mod.rs
src/ui/: draw.rs
