[package]
name = "gurk"
description = "Signal messenger client for terminal"
version = "0.2.5-dev"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2021"
keywords = ["signal", "tui"]
repository = "https://github.com/boxdot/gurk-rs"
license = "AGPL-3.0-only"
categories = ["command-line-utilities"]
resolver = "2"

[dependencies]
presage = { git = "https://github.com/boxdot/presage.git", rev = "f908e8f" }

anyhow = "1.0.57"
async-trait = "0.1.56"
chrono = { version = "0.4.19", features = ["serde"] }
crossterm = { version = "0.24.0", features = ["event-stream"] }
dirs = "4.0.0"
emoji = "0.2.1"
gh-emoji = "1.0.7"
log-panics = "2.1.0"
mime_guess = "2.0.4"
phonenumber = "0.3.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
textwrap = "0.15"
tokio = { version = "1.20.0", default-features = false, features = ["rt-multi-thread", "macros", "net", "time", "fs"] }
tokio-stream = "0.1.9"
toml = "0.5.9"
tui = {version = "0.18.0", default-features = false, features = ["crossterm"]}
unicode-width = "0.1.9"
uuid = "0.8.2"
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"
cursor = { path= "../cursor/" }
regex = "1.6.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tempfile = "3.2.0"
uuid = { version = "0.8.2", features = ["v4"] }

# [patch."https://github.com/whisperfish/presage.git"]
# presage = { path = "../presage" }

# [patch."https://github.com/whisperfish/libsignal-service-rs"]
# libsignal-service = { path = "../libsignal-service-rs/libsignal-service" }
# libsignal-service-hyper = { path = "../libsignal-service-rs/libsignal-service-hyper" }

# [patch."https://github.com/signalapp/libsignal-client"]
# libsignal-protocol = { path = "../libsignal-client/rust/protocol" }
